Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Admin_Gross_Earnings_Final_USD__c.field-meta.xml
<CustomField>
    <fullName>Admin_Gross_Earnings_Final_USD__c</fullName>
    <formula>Supplier_Gross_Earnings_Final__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admin (Gross Earnings Final USD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>