Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Branded_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Branded_Adjustment_Amount__c</fullName>
    <formula>Gross_Earnings_Calc_USD_For_Export__c * 0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Branded Adjustment Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>