Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Country_Code_Mapping_Key__c.field-meta.xml
<CustomField>
    <fullName>Country_Code_Mapping_Key__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Country Mapping Key</description>
    <inlineHelpText>Country Mapping Key</inlineHelpText>
    <label>Country Code Mapping Key</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Supply Databases</relationshipLabel>
    <relationshipName>Supply_Databases</relationshipName>
    <type>Lookup</type>
</CustomField>