Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Currency_Code_Error__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code_Error__c</fullName>
    <description>Currency Code Not Found</description>
    <inlineHelpText>Currency Code Not Found</inlineHelpText>
    <label>Currency Code Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>