Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Custom_Segment_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Custom_Segment_Lead_Source__c</fullName>
    <formula>TEXT( Segment_Category_Mapping__r.Custom_Segment_Lead_Source__c )</formula>
    <label>Custom Segment Lead Source</label>
    <type>Text</type>
</CustomField>