Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Data_Asset_Global__c.field-meta.xml
<CustomField>
    <fullName>Data_Asset_Global__c</fullName>
    <formula>Segment_Category_Mapping__r.Data_Asset_Global__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Asset Global</label>
    <type>Text</type>
</CustomField>