Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Data_Supplier_Raw_Original__c.field-meta.xml
<CustomField>
    <fullName>Data_Supplier_Raw_Original__c</fullName>
    <description>Data Supplier Raw Input Field (From Fugu reports)</description>
    <inlineHelpText>Data Supplier Raw Input Field (From Fugu reports)</inlineHelpText>
    <label>Data Supplier Raw Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>