Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Display_Rate_Card_CPM__c.field-meta.xml
<CustomField>
    <fullName>Display_Rate_Card_CPM__c</fullName>
    <formula>Segment_Category_Mapping__r.Rate_Card_CPM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Rate Card CPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>