Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Eyeota_Net_Revenue_USD__c.field-meta.xml
<CustomField>
    <fullName>Eyeota_Net_Revenue_USD__c</fullName>
    <formula>Supplier_Gross_Earnings_Final__c - Supplier_Net_Earnings_Final__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eyeota Net Revenue (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>