Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Gross_Earnings_Calc_USD_For_Export__c.field-meta.xml
<CustomField>
    <fullName>Gross_Earnings_Calc_USD_For_Export__c</fullName>
    <formula>Supplier_Gross_Earnings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Earnings Calc USD - For Export</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>