Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Gross_Earnings_Final_USD_For_Export__c.field-meta.xml
<CustomField>
    <fullName>Gross_Earnings_Final_USD_For_Export__c</fullName>
    <formula>IF(AND(AND( Date__c &gt;=DATEVALUE(&quot;2019-08-01&quot;),Supplier_Gross_Earnings_Final__c&lt;0),DAY(Date__c)=1),0,
IF(AND(AND( Date__c =DATEVALUE(&quot;2020-07-02&quot;),Supplier_Gross_Earnings_Final__c&lt;0),DAY(Date__c)=2),0,
Supplier_Gross_Earnings_Final__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Earnings Final USD - For Export</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>