Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/ID_Graph_Adjustment_USD__c.field-meta.xml
<CustomField>
    <fullName>ID_Graph_Adjustment_USD__c</fullName>
    <label>ID Graph Adjustment (USD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>