Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/PROD_Id__c.field-meta.xml
<CustomField>
    <fullName>PROD_Id__c</fullName>
    <externalId>true</externalId>
    <label>PROD Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>