Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Publisher_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Data_Type__c</fullName>
    <formula>TEXT(Data_Supplier__r.Publisher_Data_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publisher Data Type</label>
    <type>Text</type>
</CustomField>