Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Publisher_Site_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Site_Vertical__c</fullName>
    <formula>TEXT(Data_Supplier__r.Publisher_Site_Vertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publisher Site Vertical</label>
    <type>Text</type>
</CustomField>