Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Revenue_Share_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_From_Account__c</fullName>
    <formula>Data_Supplier__r.Revenue_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unbranded Revenue Share</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>