Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Segment_Key_Numeric_String_Only__c.field-meta.xml
<CustomField>
    <fullName>Segment_Key_Numeric_String_Only__c</fullName>
    <formula>Segment_Category_Mapping__r.Segment_Key_Numeric_String_Only__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Key (Numeric String Only)</label>
    <type>Text</type>
</CustomField>