Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Segment_Name_Supply_Raw_Original__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name_Supply_Raw_Original__c</fullName>
    <label>Segment Name (Supply) Raw Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>