Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Segment_Supplier_Category__c.field-meta.xml
<CustomField>
    <fullName>Segment_Supplier_Category__c</fullName>
    <formula>Segment_Category_Mapping__r.Segment_Supplier_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment Supplier Category</label>
    <type>Text</type>
</CustomField>