Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Supplier_Net_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Net_Earnings__c</fullName>
    <formula>ROUND(Supplier_Gross_Earnings__c * Supplier_Revenue_Share__c,5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Net Earnings (Calculated - USD)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>