Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Supplier_Net_Earnings_Ex_Rate_with_Cur__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Net_Earnings_Ex_Rate_with_Cur__c</fullName>
    <formula>TEXT( Currency_Code__c) &amp; &apos; &apos; &amp;  TEXT( ROUND( Supplier_Net_Earnings_Final_ExRate__c ,2) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Net Earnings (Ex Rate with Cur)</label>
    <type>Text</type>
</CustomField>