Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Supplier_Net_Earnings_Final_ExRate__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Net_Earnings_Final_ExRate__c</fullName>
    <formula>IF( TEXT(Currency_Code__c)=&quot;USD&quot;,  Supplier_Net_Earnings_Final__c ,Supplier_Net_Earnings_Ex_Rate__c  + Supplier_Net_Earnings_Retro_ExRate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Net Earnings (Final - ExRate)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>