Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/TapAd_Adjustment_USD__c.field-meta.xml
<CustomField>
    <fullName>TapAd_Adjustment_USD__c</fullName>
    <label>TapAd Adjustment (USD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>