Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Target_Country_Raw_For_EMEA__c.field-meta.xml
<CustomField>
    <fullName>Target_Country_Raw_For_EMEA__c</fullName>
    <formula>IF(Target_Region_Rollup__c ==&apos;Europe&apos;,&apos;EMEA&apos;,IF(Target_Region_Rollup__c ==&apos;MEA&apos;,&apos;EMEA&apos;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Country Raw (For EMEA)</label>
    <type>Text</type>
</CustomField>