Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Tech_Cost_Adjustment_USD_NEW__c.field-meta.xml
<CustomField>
    <fullName>Tech_Cost_Adjustment_USD_NEW__c</fullName>
    <label>Tech Cost Adjustment (USD) NEW</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>