Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Total_Adjustments_NEW__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustments_NEW__c</fullName>
    <formula>X33Across_Adjustment_USD_NEW__c + Digital_Envoy_Adjustment_USD_NEW__c + ID_Graph_Adjustment_USD_NEW__c + ShareThis_Adjustment_USD_NEW__c + TapAd_Adjustment_USD_NEW__c + Tech_Cost_Adjustment_USD_NEW__c + Other_1_Adjustment_USD_NEW__c + Other_2_Adjustment_USD_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjustments NEW</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>