Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/Uniques__c.field-meta.xml
<CustomField>
    <fullName>Uniques__c</fullName>
    <label>Uniques</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>