Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/fields/X33Across_Adjustment_USD_NEW__c.field-meta.xml
<CustomField>
    <fullName>X33Across_Adjustment_USD_NEW__c</fullName>
    <defaultValue>0</defaultValue>
    <label>33Across Adjustment (USD) NEW</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>