Sandbox/07-02-2025/force-app/main/default/objects/Supply_Database__c/listViews/Revenue_Share_Update.listView-meta.xml
<ListView>
    <fullName>Revenue_Share_Update</fullName>
    <columns>NAME</columns>
    <columns>Data_Supplier__c</columns>
    <columns>Supplier_Revenue_Share__c</columns>
    <columns>Revenue_Share_From_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Branded_Revenue_Share__c</field>
        <operation>notEqual</operation>
        <value>50</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>8/1/2018</value>
    </filters>
    <filters>
        <field>Data_Supplier__c</field>
        <operation>equals</operation>
    </filters>
    <label>Revenue Share Update</label>
    <sharedTo>
        <group>Finance_Team</group>
    </sharedTo>
</ListView>